// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Banner Test get default Banner no params  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  padding: 62px 128px;
}

.c2 {
  padding-bottom: 1rem;
  max-width: 50%;
}

.c4 {
  padding-bottom: 2rem;
  max-width: 50%;
}

.c3 {
  font-size: 48px;
  line-height: 1.5;
  font-family: 'Playfair Display';
  font-weight: bold;
  color: #fff;
}

.c5 {
  font-size: 24px;
  line-height: 1.5;
  font-family: 'Montserrat Alternates';
  font-weight: bold;
  color: #fff;
}

.c6 {
  min-width: 163px !important;
  min-height: 48px !important;
  font-size: 14px;
  border-radius: 32px;
}

.c0 {
  height: 440px;
  width: 100%;
  background-image: url(mock.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

<body>
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <p
              class="MuiTypography-root c3 MuiTypography-body1"
              customcolor="white"
              customvariant="header1"
            >
              banner title
            </p>
          </div>
          <div
            class="c4"
          >
            <p
              class="MuiTypography-root c5 MuiTypography-body1"
              customcolor="white"
              customvariant="header2"
            >
              This is your background subtitle
            </p>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined c6 MuiButton-outlinedPrimary"
            data-testid="banner-btn"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Shop now
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-AxhCb eEEZGs"
    >
      <div
        class="sc-AxjAm wQNUV"
      >
        <div
          class="sc-AxjAm QCVyp"
        >
          <p
            class="MuiTypography-root sc-AxirZ hASgob MuiTypography-body1"
            customcolor="white"
            customvariant="header1"
          >
            banner title
          </p>
        </div>
        <div
          class="sc-AxjAm cuayUK"
        >
          <p
            class="MuiTypography-root sc-AxirZ gMnndD MuiTypography-body1"
            customcolor="white"
            customvariant="header2"
          >
            This is your background subtitle
          </p>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined sc-AxiKw inYPse MuiButton-outlinedPrimary"
          data-testid="banner-btn"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Shop now
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App Banner Test get default Banner no params with action 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c1 {
  padding: 62px 128px;
}

.c2 {
  padding-bottom: 1rem;
  max-width: 50%;
}

.c4 {
  padding-bottom: 2rem;
  max-width: 50%;
}

.c3 {
  font-size: 48px;
  line-height: 1.5;
  font-family: 'Playfair Display';
  font-weight: bold;
  color: #fff;
}

.c5 {
  font-size: 24px;
  line-height: 1.5;
  font-family: 'Montserrat Alternates';
  font-weight: bold;
  color: #fff;
}

.c6 {
  min-width: 163px !important;
  min-height: 48px !important;
  font-size: 14px;
  border-radius: 32px;
}

.c0 {
  height: 440px;
  width: 100%;
  background-image: url(mock.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <p
              class="MuiTypography-root c3 MuiTypography-body1"
              customcolor="white"
              customvariant="header1"
            >
              banner title
            </p>
          </div>
          <div
            class="c4"
          >
            <p
              class="MuiTypography-root c5 MuiTypography-body1"
              customcolor="white"
              customvariant="header2"
            >
              This is your background subtitle
            </p>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined c6 MuiButton-outlinedPrimary"
            data-testid="banner-btn"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Shop now
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-AxhCb eEEZGs"
    >
      <div
        class="sc-AxjAm wQNUV"
      >
        <div
          class="sc-AxjAm QCVyp"
        >
          <p
            class="MuiTypography-root sc-AxirZ hASgob MuiTypography-body1"
            customcolor="white"
            customvariant="header1"
          >
            banner title
          </p>
        </div>
        <div
          class="sc-AxjAm cuayUK"
        >
          <p
            class="MuiTypography-root sc-AxirZ gMnndD MuiTypography-body1"
            customcolor="white"
            customvariant="header2"
          >
            This is your background subtitle
          </p>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined sc-AxiKw inYPse MuiButton-outlinedPrimary"
          data-testid="banner-btn"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Shop now
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
